--- a/src/map.html
+++ b/src/map.html
@@ -11,33 +11,16 @@
         #data {
             font-family: Courier New, Courier, monospace;
         }
-        .wrapper {
-            display: flex;
-            margin-bottom: 20px;
-        }
-        .wrapped-left {
-            flex:0;
-        }
-        .wrapped-middle {
-            flex:1;
-            margin-left: 50px;
-        }
-        .wrapped-right {
-            flex:2;
-            margin-left: 50px;
-        }
-        .wrapped-right > div {
-            margin-bottom: 1em;
-        }
         .dump, .code {
             white-space: pre;
             color: #999;
         }
-        span.highlight {
-            background-color: #00ccff;
-        }
         span.dim {
             color: #bbb;
+        }
+        #info {
+            font-family: monospace;
+            margin: 1em 0;
         }
     </style>
 </head>
@@ -45,12 +28,14 @@
     <h2>Novation Bass Station II SysEx Map</h2>
     <hr />
     <div id="data" class="code"></div>
+    <div id="info"></div>
     <script>
+
+        // All masks are 8 bits long.
 
         const COLS = 8;
         const EOL = '\n';
         const COLORS = ['#00ff00', '#00ccff', '#ff6666'];
-//        const COLORS = ['red', 'yellow', 'blue'];
 
         String.prototype.padZero = function(len, c) {
             var s = '', c = c || '0', len = (len || 2) - this.length;
@@ -66,65 +51,50 @@
             return `<span class="dim">${s}</span>`;
         }
 
-        /**
-         * value and mask must both be the same length (in bits)
-         * @param value
-         * @param mask
-         * @param color
-         * @returns {string}
-         */
-        function colorMask(value, mask, color) {
-            let s = '';
-            let m = b(mask);
-            let v = b(value);
-            for (let i=0; i<v.length; i++) {
-                if (m[i] == '1') {
-                    s += `<span style="color:#000;background-color:${color}">${v[i]}</span>`;
-                } else {
-                    s += v[i];
-                }
-            }
-            return s;
-        }
-
-        function findMask(offset) {
-            for (let i=0; i<BS2_SYSEX.length; i++) {
-                let p = BS2_SYSEX[i];
-                if (p.offset == offset) {
-                    return p.masks[0];
-                }
-                if ((offset > 0) && (p.offset == (offset-1)) && (p.masks.length == 2)) {
-                    return p.masks[1];
-                }
-            }
-            return -1;
-        }
+        var color_index = 0;
 
         function getBinRepr(data) {
-            let color_index = 0;
-            let s = '    ';
+
+            // 1: get a array of arrays of chars representing the binary values of the data.
+            //    This will allow us to handle (colorize) each bit individually.
+            let bin = [];
+            for (let i=0; i < data.byteLength; i++) {
+                bin.push(b(data[i]).split(''));
+            }
+
+            // 2: colorize according to the masks defined in BS2_SYSEX
+            for (let i=0; i<BS2_SYSEX.length; i++) {
+                let descr = $("<div>").text(BS2_SYSEX[i].description).html();
+                let color = COLORS[color_index++ % COLORS.length];
+                let masks = BS2_SYSEX[i].masks;
+                for (let k=0; k<masks.length; k++) {
+                    for (let b=1; b<=8; b++) {  // testing each bits
+                        if ((masks[k] & (1<<(b-1))) != 0) {
+                            // bit is set in mask
+                            bin[BS2_SYSEX[i].offset + k][8-b] = `<span style="color:#000;background-color:${color}" title="${descr}">1</span>`;
+                        }
+                    }
+                }
+            }
+
+            // 3: format and add rows and columns headers
+            let s = "    ";
             for (let i=0; i < 8; i++) {
                 s += `       ${dim(i)} `;
             }
             s += EOL;
             let k = 0;
-            for (let i=0; i < data.byteLength; i++) {
+            for (let i=0; i < bin.length; i++) {
                 if ((k % COLS) == 0) {
-                    s += dim(k.toString(10).padZero(3)) + ' ';
+                    s += dim(k.toString(10).padZero(3)) + " ";
                 }
-                //s += b(data[i]) + ' ';
-                let m = findMask(i);
-                if (m >= 0) {
-                    s += colorMask(data[i], m, COLORS[color_index++ % COLORS.length]);
-                } else {
-                    s += b(data[i]);
-                }
-                s += ' ';
+                s += bin[i].join('') + " ";
                 k++;
                 if ((k % COLS) == 0) {
                     s += EOL;
                 }
             }
+
             return s;
         }
 
@@ -142,6 +112,13 @@
                 }
             }
             $("#data").html(getBinRepr(data));
+
+            $("#data span").mouseover(function(){
+                $("#info").html(($(this).attr("title")));
+            });
+            $("#data span").mouseout(function(){
+                $("#info").empty();
+            });
         });
     </script>
 </body>
