--- a/src/decode-sysex.html
+++ b/src/decode-sysex.html
@@ -86,7 +86,7 @@
 
             for (var prop in BS2.param) {
 
-                console.log(prop);
+                //console.log(prop);
 
                 let param = BS2.param[prop];
 
@@ -128,9 +128,9 @@
                 s += ' final value: ';
 
                 let final_value = 0;
-                if (hasOwnProperty.call(param, 'transform')) {
+                if (hasOwnProperty.call(param.sysex, 'transform')) {
                     console.log('compute final value with transform function and raw_value=' + param_value);
-                    final_value = param.transform(param_value);
+                    final_value = param.sysex.transform(param_value);
                     console.log('final value', final_value);
                 }
 
